--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,6 @@
+title: EmuFlight
+description: [A short description of your site's purpose]
+url: "https://emuflight.github.io/"
+# markdown: kramdown
 theme: jekyll-theme-hacker
+# exclude: [vendor]
