--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,12 @@
+title: EmuFlight
+description: [EmuFlight provides the best flying experience by creating a healthy work environment for developers and pilots of racing and freestyle drones. PR's welcome!
+]
+url: "https://emuflight.github.io/"
+markdown: kramdown
 theme: jekyll-theme-hacker
+exclude: [vendor]
+show_downloads: [true]
+# downloads URLS to CHANGE if needed
+# github:
+#   zip_url: "https://github.com/emuflight/emuflight.github.io/zipball/gh-pages"
+#   another_url: another value
