--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,7 @@ github_username: jekyll
 # Build settings
 # theme: minima
 theme: 'just-the-docs'
+color_scheme: 'custom-theme'
 plugins:
   - jekyll-feed
 # Exclude from processing.
