--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ description: >- # this means to ignore newlines until "baseurl:"
   EmuFlight provides the best flying experience by creating a healthy work environment for developers and pilots of racing and freestyle drones. PR's welcome!
 baseurl: '' # the subpath of your site, e.g. /blog
 url: '' # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username: jekyll
+# twitter_username: emuflight
+github_username: emuflight
 
 # Build settings
 # theme: minima
@@ -53,9 +53,9 @@ plugins:
 #   - vendor/gems/
 #   - vendor/ruby/
 # Color scheme supports "light" (default) and "dark"
-color_scheme: dark
+color_scheme: emuflight
 # Set a path/url to a logo that will be displayed instead of the title
-logo: '/assets/images/emuflight-logo.png'
+logo: '/assets/artwork/emuflight-logo.png'
 
 # Aux links for the upper right navigation
 aux_links:
