change gemfile to remote_theme

--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,8 @@ github_username: emuflight
 
 # Build settings
 # theme: minima
-theme: 'just-the-docs'
+# theme: 'just-the-docs'
+remote_theme: pmarsceill/just-the-docs
 color_scheme: emuflight
 plugins:
   - jekyll-feed
