Test remove unused files (#20)
* removed unused files used to fix GH page not loading

* remove extra files hopefully without breaking and try to fix URL //

* fix-url removed / from _config url

* bundle update GH

* merge changes

--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   EmuFlight provides the best flying experience by creating a healthy work environment for developers and pilots of racing and freestyle drones. PR's welcome!
 baseurl:  # the subpath of your site, e.g. /blog
-url: 'https://emuflight.github.io/' # the base hostname & protocol for your site, e.g. http://example.com
+url: 'https://emuflight.github.io' # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: emuflight
 github_username: emuflight
 
