--- a/_config.yml
+++ b/_config.yml
@@ -22,14 +22,15 @@ title: Emuflight
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   EmuFlight provides the best flying experience by creating a healthy work environment for developers and pilots of racing and freestyle drones. PR's welcome!
-baseurl: '' # the subpath of your site, e.g. /blog
-url: 'https://emuflight.github.io/' # the base hostname & protocol for your site, e.g. http://example.com
+baseurl:  # the subpath of your site, e.g. /blog
+url: 'https://emuflight.github.io' # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: emuflight
 github_username: emuflight
 
 # Build settings
 # theme: minima
-theme: 'just-the-docs'
+# theme: 'just-the-docs'
+remote_theme: pmarsceill/just-the-docs
 color_scheme: emuflight
 plugins:
   - jekyll-feed
@@ -60,7 +61,7 @@ logo: '/assets/artwork/emuflight-logo.png'
 # Aux links for the upper right navigation
 aux_links:
   'Emuflight on GitHub':
-    - '//https://github.com/emuflight'
+    - 'https://github.com/emuflight'
 
 # Makes Aux links open in a new tab. Default is false
 aux_links_new_tab: true
@@ -84,6 +85,6 @@ last_edit_time_format: '%b %e %Y at %I:%M %p' # uses ruby's time format: https:/
 gh_edit_link: true # show or hide edit this page link
 gh_edit_link_text: 'Emuflight releases.'
 gh_edit_repository: 'https://github.com/emuflight/EmuFlight/releases' # the github URL for your repo
-gh_edit_branch: 'master' # the branch that your docs is served from
+gh_edit_branch: 'main' # the branch that your docs is served from
 # gh_edit_source: docs # the source that your files originate from
-gh_edit_view_mode: 'tree' # "tree" or "edit" if you want the user to jump into the editor immediately
+gh_edit_view_mode: 'edit' # "tree" or "edit" if you want the user to jump into the editor immediately
